force-app/main/default/objects/KimbleOne__FlexibleTemplate__c/KimbleOne__FlexibleTemplate__c.object-meta.xml
<CustomObject>
    <label>Flexible Template</label>
    <nameField>
        <label>Flexible Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flexible Templates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>