force-app/main/default/objects/KimbleOne__FlexibleTemplate__c/fields/KimbleOne__ConfigurationData__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ConfigurationData__c</fullName>
    <label>Configuration Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>