force-app/main/default/objects/KimbleOne__FlexibleTemplate__c/fields/KimbleOne__CustomStyleSheet__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CustomStyleSheet__c</fullName>
    <label>Custom Style Sheet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>