force-app/main/default/objects/KimbleOne__FlexibleTemplate__c/fields/KimbleOne__HeaderFooterStyleSheet__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HeaderFooterStyleSheet__c</fullName>
    <label>Header Footer Style Sheet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>